src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__timeline_filter_no_results_80x24.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ Timeline: v1 → v3 (3 versions)  │ Sort: Chronological ↑ │ Filter: All        │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Components Evolution (1-3/3) [m: metric, +/-: zoom, h/l: scroll] ────────────┐
│▃▃▃9▃▃▃ ▃▃▃9▃▃▃ ▁▁▁3▁▁▁                                                       │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Versions [g: jump, d: diff] ─┐┌──────────────────────────────────────────────┐
│#    Version    Comp Chan CRA ││                                              │
│                              ││                    (empty)                   │
│1.   v1         9    init ✗   ││                                              │
│2.   v2         9    +4 - ✗   ││               No results found               │
│3.   v3         3    +3 - ✗   ││                                              │
│                              ││             Filter: Filter = All             │
│                              ││                                              │
│                              ││ Press [f] to change filter or [Esc] to clear │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Added: 7  Removed: 13  │  …  Tab panel  / search  V views  K keys  q quit     │
└──────────────────────────────────────────────────────────────────────────────┘
