src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__timeline_modal_baseline_diff_80x24.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ Timeline: v1 → v3 (3 versions)  │ Sort: Chronological ↑ │ Filter: All        │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Components Evolution (1-3/3) [m: metric, +/-: zoom, h/l: scroll] ────────────┐
│▃▃▃9▃▃▃┌ Version Diff: v1 ↔ v3 ───────────────────────────────────────┐       │
└───────│Comparing: v1 → v3  (chronological order)                     │───────┘
┌ Versio│                                                              │───────┐
│#   Ver│Components: 9 vs 3                                            │atus   │
│       │                                                              │       │
│1.  v1 │Changes:                                                      │ded    │
│2.  v2 │  + Added: 3                                                  │ded    │
│3.  v3 │  - Removed: 9                                                │ded    │
│       │  ~ Modified: 0                                               │moved  │
│       │                                                              │moved  │
│       │Added Components:                                             │moved  │
│       │  + bsi-aibom-complete-app 1.0.0                              │moved  │
│       │… 10 more lines — enlarge the terminal to see them            │moved  │
│       │                                                              │moved  │
│       │←/→: change compare version  Esc: close                       │moved  │
│       └──────────────────────────────────────────────────────────────┘moved  │
└──────────────────────────────┘└──────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Changes across versions: +7 -13  │  ←/→ compare version  Esc close            │
└──────────────────────────────────────────────────────────────────────────────┘
