src/tui/ui/snapshots/sbom_tools__tui__ui__render_snapshot_tests__timeline_stats_120x40.snap
---
source: src/tui/ui/render_snapshot_tests.rs
expression: text
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Timeline: v1 → v3 (3 versions)  │ Sort: Chronological ↑ │ Filter: All │ Stats                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Statistics [t: toggle] ──────────────────────────────────────────────────────────────────────────────────────────────┐
│Total Added: 7  Total Removed: 13  Total Modified: 5                                                                  │
│Avg Components: 7  Version Changes: 16  Compliance: 0/3 pass CRA  License Δ: 0                                        │
│Vuln trend: 3 → 2 → 0  (▼ net -3)                                                                                     │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Components Evolution (1-3/3) [m: metric, +/-: zoom, h/l: scroll] ────────────────────────────────────────────────────┐
│                                                                                                                      │
│                                                                                                                      │
│▂▂▂▂▂▂▂ ▂▂▂▂▂▂▂                                                                                                       │
│███████ ███████                                                                                                       │
│███9███ ███9███ ▆▆▆3▆▆▆                                                                                               │
│ 24-01   24-06   26-06                                                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Versions [g: jump, d: diff] ─────────────────┐┌ Component Evolution (16/16) [f: filter, Enter: detail] ──────────────┐
│#   Version      Date       Comps Changes  CRA││Component                 Version            Seen       Status        │
│                                              ││                                                                      │
│1.  v1           2024-01-15 9     initial  ✗  ││product-reviews-1M                           v3+        Added         │
│2.  v2           2024-06-15 9     +4 -4    ✗  ││sentiment-classifier      1.0.0              v3+        Added         │
│3.  v3           2026-06-14 3     +3 -9    ✗  ││bsi-aibom-complete-app    1.0.0              v3+        Added         │
│                                              ││acme-webapp               2.0.0              v1-v2      Removed       │
│                                              ││axios                     1.4.0              v1-v2      Removed       │
│                                              ││dayjs                     1.11.7             v2         Removed       │
│                                              ││express                   4.18.2             v1-v2      Removed       │
│                                              ││jquery                    3.5.1              v1         Removed       │
│                                              ││lodash                    4.17.21            v1-v2      Removed       │
│                                              ││moment                    2.29.1             v1         Removed       │
│                                              ││prisma                    4.15.0             v2         Removed       │
│                                              ││react                     18.2.0             v1-v2      Removed       │
│                                              ││request                   2.88.2             v1         Removed       │
│                                              ││typescript                5.0.4              v2         Removed       │
│                                              ││underscore                1.12.0             v1         Removed       │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Changes across versions: +7 -13  │  ℹ Statistics: shown                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
